--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
 			<tr>
 				<td>
 					<img src="IMG/Mash.jpg">
-					<a href="https://bredalis.github.io/Lyrics-Bling-Bang-Bang-Born/" target="_blank">Bling-Bang-Bang-Born</a>
+					<a href="https://bredalis.github.io/BlingBangBangBorn/" target="_blank">Bling-Bang-Bang-Born</a>
 				</td>
 				<td>Creepy Nuts</td>
 			</tr>
 			<tr>
 				<td>
 					<img src="IMG/Toca_Toca.jpg">
-					<a href="https://bredalis.github.io/Lyrics-Toca-Toca/" target="_blank">Toca Toca</a>
+					<a href="https://bredalis.github.io/TocaToca/" target="_blank">Toca Toca</a>
 				</td>
 				<td>Fly Project</td>
 			</tr>
 			<tr>
 				<td>
 					<img src="IMG/Fire.jpg">
-					<a href="https://bredalis.github.io/Lyrics-Fire/" target="_blank">Fire</a>
+					<a href="https://bredalis.github.io/LyricsFire/" target="_blank">Fire</a>
 				</td>
 				<td>BTS</td>
 			</tr>
