feat: ✨ Nuevos estilos

--- a/HTML/404.html
+++ b/HTML/404.html
@@ -8,11 +8,13 @@
 	<link rel="shortcut icon" href="../IMG/Mic_Drop.jpg" type="image/x-icon">
 </head>
 <body>
-	
-	<h1>404</h1>
-	<img src="../IMG/Mic_Drop.jpg">
-	<h2><span>Página</span> No Encontrada</h2>
-	<p><a href="index.html">Volver a la página principal</a></p>
-	
+
+	<main>
+
+		<h1>404</h1>
+		<img src="../IMG/Mic_Drop.jpg">
+		<h2><span>Página</span> No Encontrada</h2>
+		<p><a href="index.html">Volver a la página principal</a></p>
+	</main>	
 </body>
 </html>
