--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,171 +9,205 @@
 </head>
 <body>
 
-	<div id="inicio">
+	<main>
+		<div id="inicio">
+			<img src="../IMG/Img_1.jpg" id="img1">
+			<img src="../IMG/Img_2.jpg" id="img2">
 
-		<img src="../IMG/Img_1.jpg" id="img1">
-		<img src="../IMG/Img_2.jpg" id="img2">
+			<audio src="../BTS_MicDrop.mp3" controls loop></audio>		
 
-		<audio src="../BTS_MicDrop.mp3" controls loop></audio>		
+			<h1>LETRAS -MIC DROP- <br>BTS</h1>
+			<h2>Propósito del Lyrics:</h2>
+			<p>
+				Principalmente que se diviertan y puedan cantar la canción de este gran anime. Y claro que pueden saber qué significan, es decir, contribuir y facilitar a la comunidad latinoamericana.
+			</p>
+		</div>
+		<div id="cuerpo">
+			
+			<h2>Letras</h2>
+			<h3>[Verso 1: j-hope]</h3>
 
-		<h1>LETRAS -MIC DROP- <br>BTS</h1>
-		<h2>Propósito del Lyrics:</h2>
-		<p>
-			Principalmente que se diviertan y puedan cantar la canción de este gran anime. Y claro que pueden saber qué significan, es decir, contribuir y facilitar a la comunidad latinoamericana.
-		</p>
+			<p>
+				Sí, ¿quién dijo que mi cuchara está sucia? <br>
+				No me importa, cuando agarro el micro, tengo varias cucharas de oro. <br>
+				Varios filetes crudos allí me hacen enojar. <br>
+				Una vez más, los masticaré a todos, en la noche de las estrellas <br>
+				Centro de negocios mundiales <br>
+				Primero en la lista de reclutamiento, agotado <br>
+				Esta clase no es común, disfruta de este valor. <br>
+				Los malos olores con buenos aromas van contra las reglas
+				Cuerda elástica para micrófono
+			</p>		
+			<h3>[Verso 2: SUGA]</h3>
+			<p>
+				Cuerda elástica para micrófono <br>
+				Luces brillantes, avanzando <br>
+				Pensaste que iba a fallar pero estoy bien, lo siento <br>
+				Lo siento, "cartelera" <br>
+				Lo siento, "en todo el mundo" <br>
+				Lo siento mamá, tu hijo es demasiado sexy. <br>
+				Estoy siendo un buen hijo en tu lugar. <br>
+				Sin contras en nuestros conciertos. <br>
+				Lo hago, lo hago, eres un pisto de mal gusto <br>
+				Si estas celoso demandame <br>
+				demandarlo	
+			</p>	
 
-	</div>
-	<div id="cuerpo">
-		
-		<h2>Letras</h2>
-		<h3>[Verso 1: j-hope]</h3>
+			<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
+			<p>
+				¿Viste mi bolso? ¿Viste mi bolso? <br>
+				Mi bolso está lleno de trofeos. <br>
+				¿Qué opinas de eso? ¿Qué opinas de eso? <br>
+				Los haters ya se están rindiendo <br>
+				Mi éxito ya es tan dorado. <br>
+				Estoy tan disparando como un portador de la antorcha <br>
+				Te apresuras a huir <br>
+				¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
+			</p>		
+			<h3>[Estribillo: Jung Kook, RM, SUGA, Jimin, j-hope]</h3>
+			<p>
+				Tantos trofeos en mis manos <br>
+				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
+				Caída de micrófono, caída de micrófono <br>
+				Cuidado con tus pies, cuidado con lo que dices <br>
+				Lodi dodi, estoy tan ocupado <br>
+				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
+				Caída de micrófono, caída de micrófono <br>
+				Cuidado con tus pies, cuidado con lo que dices
+			</p>		
+			<h3>[Verso 3: RM]</h3>
+			<p>
+				Este es el dicho exacto. <br>
+				La derecha prevalecerá al final <br>
+				Érase una vez <br>
+				Las fábulas de Esopo vuelan <br>
+				Mira tu realidad, que pena. <br>
+				Incluso si muero ahora, estoy muy feliz (súbelo) <br>
+				¿A qué país vamos esta vez? (Oh) <br>
+				Pasar horas en un avión (Oye) <br>
+				Sí, estoy en la montaña, sí, estoy en la bahía (Bahía) <br>
+				Agotamiento total en el escenario, MIC Drop baam
+			</p>
+			<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
+			<p>
+				¿Viste mi bolso? ¿Viste mi bolso? <br>
+				Mi bolso está lleno de trofeos. <br>
+				¿Qué opinas de eso? ¿Qué opinas de eso? <br>
+				Los haters ya se están rindiendo <br>
+				Mi éxito ya es tan dorado. <br>
+				Estoy tan disparando como un portador de la antorcha <br>
+				Te apresuras a huir <br>
+				¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
+			</p>			
+			<h3>[Estribillo: V, RM, SUGA, Jung Kook, j-hope]</h3>
+			<p>
+				Tantos trofeos en mis manos <br>
+				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
+				Caída de micrófono, caída de micrófono <br>
+				Cuidado con tus pies, cuidado con lo que dices <br>
+				Lodi dodi, estoy tan ocupado <br>
+				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
+				Caída de micrófono, caída de micrófono <br>
+				Cuidado con tus pies, cuidado con lo que dices
+			</p>				
+			<h3>[Interludio: RM]</h3>
+			<p>
+				Los que odian van a odiar <br>
+				Los jugadores van a jugar. <br>
+				Vive una vida, hombre <br>
+				Buena suerte
+			</p>		
+			<h3>[Puente: Jin, V, Jung Kook]</h3>
+			<p>
+				No hace falta que nos volvamos a ver, este es mi último adiós. <br>
+				No queda nada más que decir, ni siquiera te disculpes. <br>
+				No hace falta que nos volvamos a ver, este es mi último adiós. <br>
+				No queda nada más que decir, ni siquiera te disculpes.
+			</p>
+			<h3>[Acabado: Jimin, Jung Kook y Jimin]</h3>
+			<p>
+				Mira de cerca, mira tu patético yo. <br>
+				Nos disparamos como Coca-Cola <br>
+				Tus córneas estarán tan impactadas <br>
+				Porque somos tan geniales
+			</p>
+		</div>
+		<div id="final">
 
-		<p>
-			Sí, ¿quién dijo que mi cuchara está sucia? <br>
-			No me importa, cuando agarro el micro, tengo varias cucharas de oro. <br>
-			Varios filetes crudos allí me hacen enojar. <br>
-			Una vez más, los masticaré a todos, en la noche de las estrellas <br>
-			Centro de negocios mundiales <br>
-			Primero en la lista de reclutamiento, agotado <br>
-			Esta clase no es común, disfruta de este valor. <br>
-			Los malos olores con buenos aromas van contra las reglas
-			Cuerda elástica para micrófono
-		</p>		
-		<h3>[Verso 2: SUGA]</h3>
-		<p>
-			Cuerda elástica para micrófono <br>
-			Luces brillantes, avanzando <br>
-			Pensaste que iba a fallar pero estoy bien, lo siento <br>
-			Lo siento, "cartelera" <br>
-			Lo siento, "en todo el mundo" <br>
-			Lo siento mamá, tu hijo es demasiado sexy. <br>
-			Estoy siendo un buen hijo en tu lugar. <br>
-			Sin contras en nuestros conciertos. <br>
-			Lo hago, lo hago, eres un pisto de mal gusto <br>
-			Si estas celoso demandame <br>
-			demandarlo	
-		</p>	
+			<h2>Te podrían interesar estos:</h2>
 
-		<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
-		<p>
-			¿Viste mi bolso? ¿Viste mi bolso? <br>
-			Mi bolso está lleno de trofeos. <br>
-			¿Qué opinas de eso? ¿Qué opinas de eso? <br>
-			Los haters ya se están rindiendo <br>
-			Mi éxito ya es tan dorado. <br>
-			Estoy tan disparando como un portador de la antorcha <br>
-			Te apresuras a huir <br>
-			¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
-		</p>		
-		<h3>[Estribillo: Jung Kook, RM, SUGA, Jimin, j-hope]</h3>
-		<p>
-			Tantos trofeos en mis manos <br>
-			Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
-			Caída de micrófono, caída de micrófono <br>
-			Cuidado con tus pies, cuidado con lo que dices <br>
-			Lodi dodi, estoy tan ocupado <br>
-			Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
-			Caída de micrófono, caída de micrófono <br>
-			Cuidado con tus pies, cuidado con lo que dices
-		</p>		
-		<h3>[Verso 3: RM]</h3>
-		<p>
-			Este es el dicho exacto. <br>
-			La derecha prevalecerá al final <br>
-			Érase una vez <br>
-			Las fábulas de Esopo vuelan <br>
-			Mira tu realidad, que pena. <br>
-			Incluso si muero ahora, estoy muy feliz (súbelo) <br>
-			¿A qué país vamos esta vez? (Oh) <br>
-			Pasar horas en un avión (Oye) <br>
-			Sí, estoy en la montaña, sí, estoy en la bahía (Bahía) <br>
-			Agotamiento total en el escenario, MIC Drop baam
-		</p>
-		<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
-		<p>
-			¿Viste mi bolso? ¿Viste mi bolso? <br>
-			Mi bolso está lleno de trofeos. <br>
-			¿Qué opinas de eso? ¿Qué opinas de eso? <br>
-			Los haters ya se están rindiendo <br>
-			Mi éxito ya es tan dorado. <br>
-			Estoy tan disparando como un portador de la antorcha <br>
-			Te apresuras a huir <br>
-			¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
-		</p>			
-		<h3>[Estribillo: V, RM, SUGA, Jung Kook, j-hope]</h3>
-		<p>
-			Tantos trofeos en mis manos <br>
-			Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
-			Caída de micrófono, caída de micrófono <br>
-			Cuidado con tus pies, cuidado con lo que dices <br>
-			Lodi dodi, estoy tan ocupado <br>
-			Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
-			Caída de micrófono, caída de micrófono <br>
-			Cuidado con tus pies, cuidado con lo que dices
-		</p>				
-		<h3>[Interludio: RM]</h3>
-		<p>
-			Los que odian van a odiar <br>
-			Los jugadores van a jugar. <br>
-			Vive una vida, hombre <br>
-			Buena suerte
-		</p>		
-		<h3>[Puente: Jin, V, Jung Kook]</h3>
-		<p>
-			No hace falta que nos volvamos a ver, este es mi último adiós. <br>
-			No queda nada más que decir, ni siquiera te disculpes. <br>
-			No hace falta que nos volvamos a ver, este es mi último adiós. <br>
-			No queda nada más que decir, ni siquiera te disculpes.
-		</p>
-		<h3>[Acabado: Jimin, Jung Kook y Jimin]</h3>
-		<p>
-			Mira de cerca, mira tu patético yo. <br>
-			Nos disparamos como Coca-Cola <br>
-			Tus córneas estarán tan impactadas <br>
-			Porque somos tan geniales
-		</p>
-	</div>
-	<div id="final">
+			<table>
+				<tr>
+					<th>Canción</th>
+					<th>Artista</th>
+				</tr>
+				<tr>
+					<td>
+						<img src="../IMG/Mash.jpg">
+						<a href="https://bredalis.github.io/BlingBangBangBorn/HTML/index.html" target="_blank">Bling-Bang-Bang-Born</a>
+					</td>
+					<td>Creepy Nuts</td>
+				</tr>
+				<tr>
+					<td>
+						<img src="../IMG/Toca_Toca.jpg">
+						<a href="https://bredalis.github.io/TocaToca/HTML/index.html" target="_blank">Toca Toca</a>
+					</td>
+					<td>Fly Project</td>
+				</tr>
+				<tr>
+					<td>
+						<img src="../IMG/Fire.jpg">
+						<a href="https://bredalis.github.io/LyricsFire/HTML/index.html" target="_blank">Fire</a>
+					</td>
+					<td>BTS</td>
+				</tr>
+			</table>
 
-		<h2>Te podrían interesar estos:</h2>
+			<img src="../IMG/Img_3.jpg" id="img3">
+			<img src="../IMG/Img_4.jpg" id="img4">
+			<img src="../IMG/Img_5.jpg" id="img5">
+			<img src="../IMG/Img_6.jpg" id="img6">
+		</div>
+	</main>
 
-		<table>
-			<tr>
-				<th>Canción</th>
-				<th>Artista</th>
-			</tr>
-			<tr>
-				<td>
-					<img src="../IMG/Mash.jpg">
-					<a href="https://bredalis.github.io/BlingBangBangBorn/HTML/index.html" target="_blank">Bling-Bang-Bang-Born</a>
-				</td>
-				<td>Creepy Nuts</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="../IMG/Toca_Toca.jpg">
-					<a href="https://bredalis.github.io/TocaToca/HTML/index.html" target="_blank">Toca Toca</a>
-				</td>
-				<td>Fly Project</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="../IMG/Fire.jpg">
-					<a href="https://bredalis.github.io/LyricsFire/HTML/index.html" target="_blank">Fire</a>
-				</td>
-				<td>BTS</td>
-			</tr>
-		</table>
-
-		<img src="../IMG/Img_3.jpg" id="img3">
-		<img src="../IMG/Img_4.jpg" id="img4">
-		<img src="../IMG/Img_5.jpg" id="img5">
-		<img src="../IMG/Img_6.jpg" id="img6">
-	</div>
-	
 	<footer>
-		<p>💖 Gracias a la comunidad LatinLyrics 💖</p>
-	</footer>	
+    	<h1>LatinLyrics</h1>
 
+        <ul>
+            <li>
+            	<a href="https://github.com/Bredalis" target="_blank">
+            		<img src="../IMG/GitHub.svg" alt="GitHub" title="GitHub" height="50">
+            	</a>
+            </li>
+            <li>
+            	<a href="https://www.linkedin.com/in/bredalis-gautreaux/" target="_blank">
+            		<img src="../IMG/LinkedIn.svg" alt="LinkedIn" title="LinkedIn" height="50">
+            	</a>
+            </li>
+            <li>
+            	<a href="https://es.stackoverflow.com/users/293358/bredalis-gautreaux" target="_blank">
+            		<img src="../IMG/Stack_OverFlow.svg" alt="Stack OverFlow" title="Stack OverFlow" height="50">
+            	</a>
+            </li>
+            <li>
+            	<a href="https://huggingface.co/chat/assistants?user=Bredalis" target="_blank">
+            		<img src="../IMG/Hugging_Face.png" alt="Hugging Face" title="Hugging Face">
+            	</a>
+            </li>
+            <li>
+            	<a href="https://x.com/Bredalis_P" target="_blank">
+            		<img src="../IMG/X.svg" alt="X" title="X" height="50">
+            	</a>
+            </li>
+            <li>
+            	<a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">
+            		<img src="../IMG/Licencia.svg" alt="Licencia Pública General GNU v3.0" title="Licencia Pública General GNU v3.0" height="50">
+            	</a>
+            </li>
+        </ul>
+
+        <p>© 2024 LatinLyrics <br> Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
